--- a/src/tasks/task-6-model-deployment/templates/home.html
+++ b/src/tasks/task-6-model-deployment/templates/home.html
@@ -6,6 +6,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>Aswan Egypt Detecting Hate Using NLP</h1>
+        <h1>Aswan Egypt Detecting hate using NLP</h1>
     </body>
 </html>
