--- a/src/tasks/task-6-model-deployment/templates/admin.html
+++ b/src/tasks/task-6-model-deployment/templates/admin.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <title>detecting hate nlp</title>
-      <link rel="stylesheet" href="admin.css">
+      <link rel="stylesheet" href="/static/css/admin.css">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
