--- a/src/tasks/task-6-model-deployment/templates/home.html
+++ b/src/tasks/task-6-model-deployment/templates/home.html
@@ -4,36 +4,49 @@
 <head>
     <title>detecting hate nlp</title>
     <script src="https://kit.fontawesome.com/ecf6a77b25.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/static/css/home.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <style>
-        body {
-            background-color: gray;
-        }
-        .forget{
-            margin-left: 35%;
-        }
-        .hateful {
-            color: red;
-        }
 
-        .risk {
-            color: orange;
-        }
-    </style>
+
+
 </head>
 
-<body>
+<body style="background-color: gray;">
+
+
+
+
+    <header class=" sticky-top">
+
+        <div class="login-signup-btn-container  p-2 row ">
+
+            <div class="header-heading col-9 ">
+                <h3>Detecting Hateful and Offensive Language using NLP (Aswan Egypt)</h3>
+            </div>
+
+            <div class="button-container d-flex justify-content-end col-3 ">
+                <button class="btn btn-secondary login_btn" data-bs-target="#loginForm" data-bs-toggle="modal">Log In</button>
+                <button type="button" class="btn btn-secondary " data-bs-toggle="modal" data-bs-target="#signupForm">Sign Up </button>
+        
+            </div>
+
+            
+
+        </div>
+       
+    </header>
+
+
     <!-- <h1>Aswan Egypt Detecting hate using NLP</h1> -->
-    <div class="container">
-        <div class="rounded-4 bg-light" style="width: 60rem; margin: 60px;">
+    <div class="container row">
+        <div class="rounded-4 bg-light content-container col-11 col-lg-12 col-md-12 col-sm-12" style=" margin-top: 7%;">
             <div class="d-flex justify-content-end p-2">
                 <div class="px-3">
-                    <button class="btn btn-secondary" data-bs-target="#loginForm" data-bs-toggle="modal">Log In</button>
                     <div class="modal fade" id="loginForm" aria-hidden="true" aria-labelledby="loginToggleLabel"
                         tabindex="-1">
                         <div class="modal-dialog modal-dialog-centered">
@@ -114,10 +127,7 @@
 
                 </div>
                 <div>
-                    <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#signupForm">
-                        Sign Up
-                    </button>
+            
 
                     <!-- Modal -->
                     <div class="modal fade" id="signupForm" data-bs-backdrop="static" data-bs-keyboard="false"
@@ -205,8 +215,21 @@
                 </div>
             </div>
         </div>
-        <div class=" rounded-4 bg-light p-2" style="width: 60rem; margin: 60px;">
+        <div class=" rounded-4 bg-light p-2 content-container col-11 col-lg-12 col-md-12 col-sm-12">
             <div class="d-flex flex-column">
+
+
+
+                <div class="pred-head p-2">
+
+                    <h3>Recent Predictions</h3>
+
+                </div>
+
+
+
+
+
                 <div class="p-2">
                     <p>Text : If you like it then Thumbs Up anf if you don't like it then thumbs-down</p>
                 </div>
@@ -371,7 +394,7 @@
 
 
 
-    <script src="/static/js/home.js"></script>
+    <script src="home.js"></script>
 </body>
 
 </html>
