Adds post route for predicting the text statement

--- a/src/tasks/task-6-model-deployment/static/css/home.css
+++ b/src/tasks/task-6-model-deployment/static/css/home.css
@@ -7,13 +7,17 @@
 }
 .hateful {
     color: red;
+    display: none;
 }
 
 .risk {
     color: orange;
+    display: none;
 }
 
-
+.neutral{
+    display: none;
+}
 
 header{
     color: #fff;
