--- a/src/tasks/task-6-model-deployment/templates/home.html
+++ b/src/tasks/task-6-model-deployment/templates/home.html
@@ -41,8 +41,6 @@
        
     </header>
 
-
-    <!-- <h1>Aswan Egypt Detecting hate using NLP</h1> -->
     <div class="container row">
         <div class="rounded-4 bg-light content-container col-11 col-lg-12 col-md-12 col-sm-12" style=" margin-top: 7%;">
             <div class="d-flex justify-content-end p-2">
@@ -210,12 +208,12 @@
                 <div class="risk">
                     <h4>Risky</h4>
                 </div>
-                <div>
+                <div class="neutral">
                     <h4>Neutral</h4>
                 </div>
             </div>
         </div>
-        <div class=" rounded-4 bg-light p-2 content-container col-11 col-lg-12 col-md-12 col-sm-12">
+        <!-- <div class=" rounded-4 bg-light p-2 content-container col-11 col-lg-12 col-md-12 col-sm-12">
             <div class="d-flex flex-column">
 
 
@@ -389,12 +387,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 
 
-    <script src="home.js"></script>
+    <script src="/static/js/home.js"></script>
 </body>
 
 </html>
